# Proga_labs

./: README.md
Laba_01/: CMakeLists.txt  MyVec.h  main.cpp
Laba_02/: CMakeLists.txt  main.cpp
Laba_03/: CMakeLists.txt  Point.cpp  Point.h  main.cpp  points.txt
Laba_04/: CMakeLists.txt  Formula_07.cpp  Formula_07.h  Formula_09.cpp  Formula_09.h  main.cpp
Laba_05/: CMakeLists.txt  Laba_05.sln  main.cpp
Laba_05/Laba_05/: Laba_05.vcxproj  Main.cpp
Laba_05/Laba_05/x64/Debug/: vc141.idb
Laba_05/Laba_05/x64/Debug/Laba_05.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Laba_05.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Laba_05/Laba_05/x64/Release/Laba_05.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Laba_05.lastbuildstate  Laba_05.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Laba_05/x64/Debug/: Laba_05.ilk
Laba_05/x64/Release/: Laba_05.iobj  Laba_05.ipdb
